--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </svg>
         </div>
         <div class="btn-group">
-          <button class="start" onclick="alert('yo')">FOCUS</button>
+          <button class="start">FOCUS</button>
           <button class="reset">RESET</button>
           <button class="pause">PAUSE</button>
         </div>
